--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -5,6 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tambah</title>
+    <style>
+        input[type=text], select {
+  width: 75%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+button[type=submit] {
+  width: 7%;
+  background-color: blue;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button[type=submit]:hover {
+  background-color: blue;
+}
+
+div {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+    </style>
 </head>
 <body>
     <form action="" method="post">
@@ -12,11 +44,13 @@
         integer <input type="text" name="integer" id="" value="<%=item.integer%>"> <br>
         float <input type="text" name="float" id="" value="<%=item.float%>" > <br>
         date <input type='date' name="date" id="" value="<%=item.date%>"> <br>
-        boolean <select name="boolean" id="" value="<%=item.boolean%>" >
-                <option>true </option>
-                <option>false</option>
-        
-        </select>
+        boolean <select name="boolean" id=""  >
+            
+            <option <%=item.boolean=='true'?"selected": null%>>true </option>
+            <option <%=item.boolean=='false'?"selected": null%>>false</option>
+    
+        </select> <br>
+
         <button type="submit">Edit</button>
     </form>
 </body>
